--- a/src/index.css
+++ b/src/index.css
@@ -15,15 +15,6 @@ a{
   text-decoration: none;
 }
 
-/* .nav {
-  background-color: #212121;
-}
-.nav h1 {
-  color: #fdfdfd;
-  margin: 0;
-  padding: 1rem;
-} */
-
 .Navbar {
   display: flex;
   background-color: #212121;
@@ -39,8 +30,16 @@ a{
   margin-left: auto;
 }
 
+.Navbar__Items--right  div {
+  border-right: 1px solid #fdfdfd;
+}
+.Navbar__Items--right div:last-child {
+  border-right: none;
+}
+
 .Navbar__Link {
-  padding-right: 8px;
+  padding-right: 4px;
+  padding-left: 4px;
 }
 .Navbar__Link:hover {
   cursor: pointer;
@@ -171,6 +170,12 @@ button {
 .voting button {
   border-radius: 40%;
 }
+.voting button.positive {
+  background-color: #b4d455;
+}
+.voting button.negative {
+  background-color: red;
+}
 
 input {
   padding: 0.4rem 0 0.4rem 0.4rem;
@@ -227,6 +232,10 @@ input {
   }
   .Navbar__Items--right {
     margin-left: 0;
+  }
+  .Navbar__Items--right div {
+    margin-left: 0;
+    border-right: none;
   }
   .Navbar__Link-toggle {
     align-self: flex-end;
