--- a/src/index.css
+++ b/src/index.css
@@ -191,6 +191,14 @@ input {
   width: 100%;
 }
 
+a.link {
+  text-decoration: underline;
+}
+
+.login {
+  text-align: center;
+}
+
 #g-recaptcha > div {
   margin: 0 auto;
 }
