--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ a:visited {
 
 a{
   text-decoration: none;
+  color: inherit;
 }
 
 .Navbar {
@@ -40,6 +41,7 @@ a{
 .Navbar__Link {
   padding-right: 4px;
   padding-left: 4px;
+  color: inherit;
 }
 .Navbar__Link:hover {
   cursor: pointer;
